--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 
 <!DOCTYPE html>
 <html>
+  
   <head>
     <title>The Gallery of Horns</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Stoke&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/base.css">
   </head>
   <body>
     <header>
