--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <head>
     <title>The Gallery of Horns</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/reset.css">
     <link href="https://fonts.googleapis.com/css?family=Stoke&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/base.css">
     <link rel = "stylesheet" type = "text/css" href = "css/moudules.css">
