--- a/page2.html
+++ b/page2.html
@@ -1,5 +1,3 @@
-<!-- Note: you may use this starter code, but it is not a requirement -->
-
 <!DOCTYPE html>
 <html>
   
@@ -15,11 +13,11 @@
     <header>
       <h1>The Gallery of Horns</h1>
       <select>
-        <option value="default">Filter by Keyword</option>
+        <option value2="default">Filter by Keyword</option>
       </select>
     </header>
     <main>
-      <section id="photo-template">
+      <section id="photo-template2">
         <h2></h2>
         <img src="" alt="">
         <p></p>
