made 2 pages work, added second js file, updated README

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
       <select>
         <option value="default">Filter by Keyword</option>
       </select>
+      <nav> 
+        <ul>
+          <a href="index.html">PAGE 1</a>
+          <a href="page2.html">PAGE 2</a>
+        </ul>
+      </nav>
     </header>
     <main>
       <section id="photo-template">
