--- a/page2.html
+++ b/page2.html
@@ -15,6 +15,12 @@
       <select>
         <option value2="default">Filter by Keyword</option>
       </select>
+      <nav> 
+        <ul>
+          <a href="index.html">PAGE 1</a>
+          <a id= 'page-2' href="page2.html">PAGE 2</a>
+        </ul>
+      </nav>
     </header>
     <main>
       <section id="photo-template2">
@@ -28,5 +34,5 @@
     </footer>
   </body>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <script src = "js/app.js"></script>
+  <script src = "js/app2.js"></script>
 </html>
