--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       </nav>
     </header>
     <main>
-      <section id="photo-template">
         <h2></h2>
-        <img src="" alt="">
+      <section id="photo-template">
+        <img style = "display: none;"/>
         <p></p>
       </section>
     </main>
@@ -35,5 +35,11 @@
     </footer>
   </body>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.4.2/handlebars.js"></script>
+  <!-- <section> 
+    <h2>{{title}}</h2>
+    <img scr
+  </section> -->
+
   <script src = "js/app.js"></script>
 </html>
