--- a/page2.html
+++ b/page2.html
@@ -24,8 +24,8 @@
     </header>
     <main>
       <section id="photo-template2">
-        <h2></h2>
-        <img src="" alt="">
+        <h2 id=title></h2>
+        <img style = "display: none;"/>
         <p></p>
       </section>
     </main>
@@ -34,5 +34,6 @@
     </footer>
   </body>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.4.2/handlebars.js"></script>
   <script src = "js/app2.js"></script>
 </html>
